--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   font_awesome_flutter: ^8.9.0
+  path_provider: ^1.6.18
   provider: ^4.3.2+2
   sqflite: ^1.3.1+1
 
